# cmf2imf

./: .gitignore  BUGS  Makefile.am  README  configure.ac
src/: Makefile.am  cmf.cpp  cmf.hpp  main.cpp
